# ncssm_hpr_2025_payload

./: CLAUDE.md  README.md  test_mavlink_recv.py
.claude/: settings.json
.claude/skills/embassy/: SKILL.md
.claude/skills/embassy-rp/: SKILL.md
.claude/skills/flight-computer/: SKILL.md
.claude/skills/ground-station/: SKILL.md
.claude/skills/orange-pi-4a/: SKILL.md
.claude/skills/pico-logger/: SKILL.md  troubleshooting.md
.claude/skills/pico-tooling/: SKILL.md
.claude/skills/sd-card-logging/: SKILL.md
.github/workflows/: release.yml
flight_computer/: Cargo.toml  README.md
flight_computer/src/: 2581417.txt  audio.rs  camera.rs  command_rx.rs  config.rs  frame_sender.rs  main.rs  pico_rx.rs
ground_station/: Cargo.toml  build.rs  memory.x
ground_station/.cargo/: config.toml
ground_station/src/: main.rs  protocol.rs  uart_bridge.rs
ground_station_ui/: index.html  package-lock.json  package.json  vite.config.js
ground_station_ui/src/: App.jsx  CameraView.jsx  ChartControls.jsx  Charts.jsx  ConnectionBar.jsx  SessionControls.jsx  TelemetryPanels.jsx  VehicleControls.jsx  style.css
ground_station_ui/src-tauri/: Cargo.toml  tauri.conf.json
ground_station_ui/src-tauri/capabilities/: default.json
ground_station_ui/src-tauri/icons/: icon.icns
ground_station_ui/src-tauri/src/: image_reassembler.rs  lib.rs  main.rs  mavlink_rx.rs  session.rs  telemetry.rs
ground_tui/: Cargo.toml
ground_tui/src/: app.rs  main.rs  mavlink_rx.rs  ui.rs
payload_types/: Cargo.toml
payload_types/src/: lib.rs
pico_logger/: Cargo.toml  build.rs  memory.x  pico.sh
pico_logger/.cargo/: config.toml
pico_logger/src/: main.rs  sdcard.rs  telemetry.rs
pico_logger/src/sensors/: bmp390.rs  calibration.rs  ens160.rs  gps.rs  lis3mdl.rs  lsm6dsox.rs  mod.rs  orientation.rs  types.rs
plugins/: marketplace.json
plugins/orangepi-ssh/: plugin.json
scripts/: flight_computer.service  ground-tui.sh  opi-deploy.sh  opi-run.sh  opi-setup.sh  rfd_config.py
telemetry_decoder/: Cargo.toml
telemetry_decoder/src/: main.rs
telemetry_tester/: Cargo.toml
telemetry_tester/src/: main.rs
(+11 files in other folders)
