[package]
name = "pico_logger"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
embassy-embedded-hal = "0.5.0"
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "executor-interrupt"] }
embassy-rp = { version = "0.9.0", features = ["rp235xa", "binary-info", "critical-section-impl"] }
embassy-sync = "0.7.2"
panic-probe = "1.0.0"
