[package]
name = "pico_logger"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
embassy-embedded-hal = "0.5.0"
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "executor-interrupt"] }
embassy-rp = { version = "0.9.0", features = ["rp2040", "binary-info", "critical-section-impl", "time-driver", "unstable-pac"] }
embassy-sync = "0.7.2"
embassy-time = "0.4"
embassy-usb = "0.5"
heapless = "0.8"
panic-probe = "1.0.0"
static_cell = "2.1"
portable-atomic = { version = "1", features = ["critical-section"] }
embassy-futures = "0.1"
embedded-hal-async = "1.0"
