[package]
name = "ground_station_ui"
version = "0.1.0"
edition = "2021"

[lib]
name = "ground_station_ui_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mavlink = { version = "0.17", features = ["ardupilotmega", "udp", "direct-serial"] }
serialport = "4"
base64 = "0.22"
